@@ -2,7 +2,7 @@ package vn.com.viettel.services.impl;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -12,6 +12,7 @@ import org.springframework.util.StringUtils;
 import lombok.RequiredArgsConstructor;
 import vn.com.viettel.dto.CatProjectPhaseDto;
 import vn.com.viettel.entities.CatProjectPhase;
+import vn.com.viettel.entities.Project;
 import vn.com.viettel.mapper.CatProjectPhaseMapper;
 import vn.com.viettel.repositories.jpa.CatProjectPhaseRepository;
 import vn.com.viettel.repositories.jpa.ProjectRepository;
@@ -41,12 +42,20 @@ public class CatProjectPhaseServiceImpl implements CatProjectPhaseService {
             );
         }
 
-        CatProjectPhase entity = mapper.toEntity(request);
-        entity.setProjectId(projectId);
-        entity.setIsDeleted(Boolean.FALSE);
+
+        CatProjectPhase entity = mapper.toEntity(request, projectId);
         entity.setCreatedAt(LocalDateTime.now());
 
-        return mapper.toDto(repository.save(entity));
+        CatProjectPhase saved = repository.save(entity);
+
+        // load project để map DTO
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new CustomException(
+                        HttpStatus.NOT_FOUND.value(),
+                        translator.getMessage("project.notfound", projectId)
+                ));
+
+        return mapper.toDto(saved, Map.of(projectId, project));
     }
 
     @Override
@@ -55,25 +64,51 @@ public class CatProjectPhaseServiceImpl implements CatProjectPhaseService {
         validateRequest(request);
 
         CatProjectPhase entity = getOrThrow(projectId, phaseId);
-        mapper.updateEntity(entity, request);
+        mapper.updateEntity(request, entity);
         entity.setUpdatedAt(LocalDateTime.now());
+        CatProjectPhase saved = repository.save(entity);
 
-        return mapper.toDto(repository.save(entity));
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new CustomException(
+                        HttpStatus.NOT_FOUND.value(),
+                        translator.getMessage("project.notfound", projectId)
+                ));
+
+        return mapper.toDto(saved, Map.of(projectId, project));
     }
 
     @Override
     @Transactional(readOnly = true)
     public CatProjectPhaseDto getById(Long projectId, Long phaseId) {
         validateProject(projectId);
-        return mapper.toDto(getOrThrow(projectId, phaseId));
+        CatProjectPhase entity = getOrThrow(projectId, phaseId);
+
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new CustomException(
+                        HttpStatus.NOT_FOUND.value(),
+                        translator.getMessage("project.notfound", projectId)
+                ));
+
+        return mapper.toDto(entity, Map.of(projectId, project));
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<CatProjectPhaseDto> getAll(Long projectId) {
         validateProject(projectId);
-        return repository.findAllByProjectIdAndIsDeletedFalseOrderByDisplayOrderAsc(projectId)
-                .stream().map(mapper::toDto).collect(Collectors.toList());
+        List<CatProjectPhase> phases =
+                repository.findAllByProjectIdAndIsDeletedFalseOrderByDisplayOrderAsc(projectId);
+        Project project = projectRepository.findByIdAndIsDeletedFalse(projectId)
+                .orElseThrow(() -> new CustomException(
+                        HttpStatus.NOT_FOUND.value(),
+                        translator.getMessage("project.notfound", projectId)
+                ));
+
+        Map<Long, Project> projectMap = Map.of(projectId, project);
+
+        return phases.stream()
+                .map(phase -> mapper.toDto(phase, projectMap))
+                .toList();
     }
 
     @Override
@@ -95,12 +130,25 @@ public class CatProjectPhaseServiceImpl implements CatProjectPhaseService {
     }
 
     private void validateRequest(CatProjectPhaseDto request) {
-        if (request == null
-                || !StringUtils.hasText(request.getPhaseCode())
-                || !StringUtils.hasText(request.getPhaseName())) {
+
+        if (request == null) {
             throw new CustomException(
-                HttpStatus.BAD_REQUEST.value(),
-                translator.getMessage("invalid.request")
+                    HttpStatus.BAD_REQUEST.value(),
+                    translator.getMessage("project.phase.payload.null")
+            );
+        }
+
+        if (!StringUtils.hasText(request.getPhaseCode())) {
+            throw new CustomException(
+                    HttpStatus.BAD_REQUEST.value(),
+                    translator.getMessage("project.phase.phaseCode.required")
+            );
+        }
+
+        if (!StringUtils.hasText(request.getPhaseName())) {
+            throw new CustomException(
+                    HttpStatus.BAD_REQUEST.value(),
+                    translator.getMessage("project.phase.phaseName.required")
             );
         }
     }
